# SPDX-FileCopyrightText: ASSUME Developers
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "assume-framework"
dynamic = ["version"]
description = "ASSUME - Agent-Based Electricity Markets Simulation Toolbox"
authors = [{ name = "ASSUME Developers", email = "contact@assume-project.de"}]
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["agent based simulation", "energy market", "reinforcement learning", "market simulation", "simulation"]

classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "argcomplete >=3.1.4",
    "nest-asyncio >=1.5.6",
    "mango-agents >=2.1.3",
    "numpy >=1.26.4",
    "tqdm >=4.64.1",
    "python-dateutil >=2.8.2",
    "sqlalchemy >=2.0.9",
    "pandas >=2.0.0",
    "psycopg2-binary >=2.9.5",
    "pyyaml >=6.0",
    "pyyaml-include >=2.2a",
    "pyomo >=6.8.0",
    "xarray",
    "highspy",
]

[project.optional-dependencies]
learning = [
    "torch >=2.0.1",
    "tensorboard >=2.7.0",
]
network = [
    "pypsa",
]
oeds = [
    "demandlib >=0.1.9",
    # see https://github.com/vacanza/holidays/discussions/1800
    "holidays <1.0",
    "pvlib >=0.10.2",
    "windpowerlib >=0.2.1",
]
test = [
    "ruff >=0.14.6",
    "mypy >=1.1.1",
    "matplotlib >=3.7.2",
    "pytest >=9",
    "pytest-cov >=7.0.0",
    "pytest-asyncio >=1.3.0",
]
all = [
    "assume-framework[oeds, network, learning]",
]
docs = [
  "sphinx <9",
  "sphinx-book-theme >=1.1.4",
  "nbsphinx >=0.9.7",
  "nbsphinx-link >= 1.3.1",
  "sphinx-argparse >= 0.5.2",
  "sphinxcontrib-mermaid >=1.0.0",
]

[project.urls]
Homepage = "https://assume-project.de/"
Repository = "https://github.com/assume-framework/assume"
Documentation = "https://assume.readthedocs.io"
Issues = "https://github.com/assume-framework/assume/issues"
Changelog = "https://assume.readthedocs.io/en/latest/release_notes.html"

[project.scripts]
assume = "assume_cli.cli:cli"

[tool.setuptools.packages.find]
include = ["assume*", "assume_cli*"]
exclude = ["assume-db*"]

[tool.setuptools_scm]

[tool.ruff]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "G", "PIE"]
ignore = ["E501", "G004", "E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "I001", # allow unsorted imports in __init__.py
    "F401", # allow unused imports in __init__.py
]
"tests/*" = [
    "S101", # allow assert statements for pytest
    "ARG",  # allow unused arguments for pytest fixtures
    "F841", # allow unused local variables
]
"examples/notebooks/*" = [
    "E402", # allow imports the middle of notebooks
    "E999", # allow no expressions
    "F841", # allow unused local variables
    "F811", # allow import redeclaration
]

[tool.pytest]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:Call to deprecated create function FieldDescriptor",
    "ignore:Call to deprecated create function Descriptor",
    "ignore:Call to deprecated create function FileDescriptor",
    "ignore:Call to deprecated create function EnumValueDescriptor",
    "ignore:Call to deprecated create function EnumDescriptor",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "require_learning",
    "require_network",
]
addopts = ["--ignore=assume-db"]

[tool.coverage.run]
omit = ["tests/*"]
source = ["assume"]

[tool.coverage.report]
# https://stackoverflow.com/a/5850364
exclude_lines = ["if __name__ == .__main__.:"]

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# output
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
ignore_missing_imports = true

[tool.codespell]
quiet-level = 3
skip = "*.csv, *.html, *.json, *.orig, *.svg, ./docs/build"
ignore-words-list = "DED,esy,flexable,Meger,ore"
